--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,12 @@
    "source": [
     "temperature = 85\n",
     "is_it_hot = None\n",
-    "# conditionals go here"
+    "if temperature <= 80:\n",
+    "    is_it_hot = \"This is nothing! Bring on the heat.\"\n",
+    "else:\n",
+    "    is_it_hot = \"It is so hot out!\"\n",
+    "    \n",
+    "is_it_hot"
    ]
   },
   {
